# superscript

./: AGENTS.md  LICENSE  README.md  biome.json  package-lock.json  package.json  turbo.json
.github/workflows/: release-desktop.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  CommandBar.css  CommandBar.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/canvas/: Canvas.tsx
apps/desktop/src/command/: CommandBar.tsx  command.css
apps/desktop/src/editor/: Editor.tsx  editor.css  markdown.ts
apps/desktop/src/editor/plugins/: caret.ts  haptics.ts
apps/desktop/src/hooks/: useAppearance.ts  useAutoSave.ts  useAutoUpdate.ts  useFileSystem.ts  useMenuEvents.ts  useNoteNavigation.ts  useRename.ts  useTitleVisibility.ts  useWindowGuards.ts
apps/desktop/src/styles/: command.css  editor.css  globals.css
apps/desktop/src/utils/: file.ts
docs/: branching.md  release-note.md  release.md  review.md
